Enhance README with RLE and Java 11 to 17 migration details
Added detailed explanation of run-length encoding in Java using a functional approach with streams and provided migration considerations from Java 11 to Java 17.